--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "women who code kl",
   "scripts": {
-    "clean": "rimraf public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "build": "cpy '**/*.{html,png,css}' '../dist/' --cwd=src --parents",
+    "deploy": "npm run build && firebase deploy"
   },
   "author": "wwcodekl",
   "license": "ISC",
